Fix hover not showing on first line, fixed #222

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -155,7 +155,6 @@ div.simframe > iframe {
     top: 0;
     bottom: 0;
     right: 0;
-    overflow: hidden;
 }
 
 #root.inverted {
